src/app/landing-page/sections/a-hero/a-hero.component.scss
@import "../../../../styles.scss";

#header {
  position: fixed;
  width: 100%;
  z-index: 1000;
  top: 0;
  transition: transform 0.4s ease-in;
  
}

.headerHidden {
  transform: translateY(-100%);
}

.heroSection {
  background: linear-gradient(
    to top right,
    rgba(61, 207, 182, 0) 40%,
    rgba($color-highLight, 0.3) 100%
  );
  height: 100dvh;
  position: relative;
  overflow: hidden;
  

  @media screen and (max-width: 1100px) {
    padding-top: 98px;
  }

  .contentWrapper {
    position: relative;
    height: 100dvh;
    display: flex;
    justify-content: center;
    align-items: center;

    @media screen and (max-width: 1100px) {
      align-items: flex-start;
      height: calc(100dvh - 98px);
    }

    .arrowLeft {
      position: absolute;
      left: 2rem;
      bottom: 0;

      @media screen and (max-width: 1100px) {
        left: 1rem;
      }
    }

    .arrowRight {
      position: absolute;
      right: 2rem;
      bottom: 0;

      @media screen and (max-width: 1100px) {
        right: 1rem;
      }
    }

    .nameContainer {
      display: flex;
      flex-direction: column;
      align-items: center;
      padding-top: 20dvh;

      @media (max-height: 900px ) {
        padding-top: 10dvh;
      }

      .job {
        font-family: "Fira", monospace;
        font-size: 2.5rem;
        padding-bottom: 12px;

        @media screen and (max-width: 1100px) {
          font-size: 1.5rem;
        }
      }

      .name {
        font-family: "Karla", sans-serif;
        font-size: 8rem;
        font-weight: bold;
        padding-bottom: 40px;

        @media screen and (max-width: 1100px) {
          font-size: 3rem;
          text-align: center;
          padding-bottom: 2rem;
        }
      }

      div {
        display: flex;
        gap: 48px;

        @media screen and (max-width: 1100px) {
          gap: 1.5rem;
        }

        @media screen and (max-width: 370px) {
          flex-direction: column;
          align-items: center;
        }
      }
    }
  }
}

